--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ serde = "1.0.126"
 serde_derive = "1.0.126"
 serde_json = "1.0.64"
 reqwest = { version = "0.11.3", features = ["json"] }
-
+thiserror = "1.0.25"
