--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ serde_derive = "1.0.126"
 serde_json = "1.0.64"
 reqwest = { version = "0.11.3", features = ["json"] }
 thiserror = "1.0.25"
+html2text = "0.2.1"
+substring = "1.4.5"
