--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,21 @@
 [package]
-name = "graviton_forum_bot"
+name = "discourse_forum_bot"
 version = "0.1.0"
 authors = ["Anton Davydov <fetsorn@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 console = "0.14.1"
-derive_more = "0.99.14"
-frunk = "0.3.2"
-frunk_core = "0.3.2"
-futures = "0.3.5"
-log = "0.4.14"
-pretty_env_logger = "0.4.0"
-teloxide = { version = "0.4", features = ["frunk", "macros", "auto-send"] }
-tokio = { version =  "1.6", features = ["rt-multi-thread", "macros"] }
-serde = "1.0.126"
-serde_derive = "1.0.126"
-serde_json = "1.0.64"
-reqwest = { version = "0.11.3", features = ["json"] }
-thiserror = "1.0.25"
+derive_more = "0.99.16"
+futures = "0.3.17"
 html2text = "0.2.1"
+log = "0.4.6"
+pretty_env_logger = "0.4.0"
+reqwest = { version = "0.11.4", features = ["json"] }
+serde = "1.0.130"
+serde_derive = "1.0.130"
+serde_json = "1.0.67"
 substring = "1.4.5"
+teloxide = { version = "0.5.2", features = ["macros", "auto-send"] }
+thiserror = "1.0.25"
+tokio = { version =  "1.11", features = ["rt-multi-thread", "macros"] }
