--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,13 @@ authors = ["Anton Davydov <fetsorn@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+chrono = "0.4.19"
 console = "0.14.1"
 derive_more = "0.99.16"
+env_logger = "0.9.0"
 futures = "0.3.17"
 html2text = "0.2.1"
 log = "0.4.6"
-pretty_env_logger = "0.4.0"
 reqwest = { version = "0.11.4", features = ["json"] }
 serde = "1.0.130"
 serde_derive = "1.0.130"
